--- a/vathsalya.html
+++ b/vathsalya.html
@@ -449,16 +449,16 @@
         <div class="gallery-grid">
           <!-- Replace these image URLs with your own pictures -->
           <div class="gallery-item">
-            <img src="C:\!major paper\vathsalya\1.jpg" alt="Memory 1" />
+            <img src="1.jpg" alt="Memory 1" />
           </div>
           <div class="gallery-item">
-            <img src="C:\!major paper\vathsalya\2.jpg" alt="Memory 2" />
+            <img src="2.jpg" alt="Memory 2" />
           </div>
           <div class="gallery-item">
-            <img src="C:\!major paper\vathsalya\3.jpg" alt="Memory 3" />
+            <img src="3.jpg" alt="Memory 3" />
           </div>
           <div class="gallery-item">
-            <img src="C:\!major paper\vathsalya\4.jpg" alt="Memory 4" />
+            <img src="4.jpg" alt="Memory 4" />
           </div>
         </div>
       </div>
@@ -619,3 +619,4 @@
   </script>
 </body>
 </html>
+
