--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@
 
     .gallery-item img {
       width: 100%;
-      height: 180px;
-      object-fit: cover;
-      display: block;
+       height: auto;          /* Let the height adjust naturally */
+       max-height: 380px;     /* Optional limit so it doesn't become too tall */
+       object-fit: contain;   /* Show the full image inside the card */
+       display: block;
     }
 
     .gallery-item::after {
@@ -619,4 +620,5 @@
   </script>
 </body>
 </html>
+
 
