--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
       <div class="glass-card">
         <h3>🧿 Na Devatha 🧿 </h3>
         <p class="section-subtitle">
-          (E Pics neeku pics matrame amo, Naaku na)
+          (E Pics neeku pics matrame amo, Naaku Prapancham)
         </p>
         <div class="gallery-grid">
           <!-- Replace these image URLs with your own pictures -->
@@ -620,5 +620,6 @@
   </script>
 </body>
 </html>
+
 
 
