--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
     .hero h1 {
       font-family: "Great Vibes", cursive;
-      font-size: clamp(2.8rem, 8vw, 4.2rem);
-      color: var(--accent);
-      text-shadow: 0 0 18px rgba(255, 182, 249, 0.9);
-      margin-bottom: 10px;
+  font-size: clamp(2.8rem, 8vw, 4.2rem);
+  color: #ffd700; /* Gold */
+  text-shadow: 0 0 20px #ffed9a, 0 0 40px #ffc400;
+  margin-bottom: 10px;
     }
 
     .hero h2 {
@@ -493,9 +493,6 @@
       </div>
     </section>
 
-    <footer>
-      Made with <span class="heart">♥</span> only for you, Vathsalya.
-    </footer>
   </main>
 
   <script>
@@ -620,6 +617,7 @@
   </script>
 </body>
 </html>
+
 
 
 
